--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -14,19 +17,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver
+            android:name=".MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter android:priority="1000">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".alarma"
-            android:label="IP Config"></activity>
+            android:label="IP Config" />
         <activity
             android:name=".Main2Activity"
-            android:label="SWPanic Button"
+            android:label="Boton de Panico "
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Fromulario"
-            android:label="Perfil"/>
+            android:label="Perfil" />
         <activity
             android:name=".MainActivity"
-            android:label="MainActivity"></activity>
+            android:label="MainActivity" />
         <activity
             android:name=".Inicio"
             android:theme="@style/Theme.AppCompat.NoActionBar">
